# figma-exporter

./: .gitignore  .gitkeep  README.md  pyproject.toml
src/figma_exporter/: __init__.py  __main__.py  cli.py  client.py  exporter.py
tests/: test_cli.py  test_client.py  test_exporter.py
